src/test/resources/public/input/typechecking/fail/unknown_type/fail05.jova
class Known {

}

class Test {
   private Unknown a;
   private Known b;
   private Known b;
}
